--- a/mcomp-codegen/definitions.sty
+++ b/mcomp-codegen/definitions.sty
@@ -56,6 +56,7 @@
 \newcommand\LCBRACK{\{}
 \newcommand\OR{||}
 \newcommand\RCBRACK{\}}
+\newcommand\abbrUNDERSCOREassign{abbr\_assign}
 \newcommand\basicUNDERSCOREtype{basic\_type}
 \newcommand\binUNDERSCOREop{bin\_op}
 \newcommand\block{block}
@@ -115,6 +116,7 @@
 \WithSuffix\newcommand\LCBRACK*{\gramterm{\LCBRACK}}
 \WithSuffix\newcommand\OR*{\gramterm{\OR}}
 \WithSuffix\newcommand\RCBRACK*{\gramterm{\RCBRACK}}
+\WithSuffix\newcommand\abbrUNDERSCOREassign*{\gramnonterm{\abbrUNDERSCOREassign}}
 \WithSuffix\newcommand\basicUNDERSCOREtype*{\gramnonterm{\basicUNDERSCOREtype}}
 \WithSuffix\newcommand\binUNDERSCOREop*{\gramnonterm{\binUNDERSCOREop}}
 \WithSuffix\newcommand\block*{\gramnonterm{\block}}
